--- a/index.html
+++ b/index.html
@@ -4,34 +4,152 @@
   <meta charset="UTF-8" />
   <title>Registro de EPI - Raízen Mundial</title>
   <style>
-    *{box-sizing:border-box;margin:0;padding:0;font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;}
-    body{background:#f4f7f6;color:#333;min-height:100vh;padding:20px;}
-    header{background:linear-gradient(90deg,#2e7d32,#388e3c);color:white;padding:20px;text-align:center;box-shadow:0 4px 10px rgba(0,0,0,0.2);margin-bottom:30px;}
-    form{background:white;padding:20px;border-radius:12px;box-shadow:0 4px 15px rgba(0,0,0,0.1);max-width:600px;margin:0 auto 40px auto;}
-    label{display:block;margin-top:15px;font-weight:bold;color:#2e7d32;}
-    select,input[type="text"]{width:100%;padding:12px;margin-top:5px;border:1px solid #ccc;border-radius:8px;transition:all 0.3s;}
-    select:focus,input[type="text"]:focus{border-color:#388e3c;outline:none;box-shadow:0 0 5px rgba(56,142,60,0.5);}
-    button{margin-top:20px;width:100%;padding:14px;background:#388e3c;color:white;border:none;border-radius:10px;font-size:18px;cursor:pointer;transition:all 0.3s;}
-    button:hover{background:#2e7d32;}
-    #codigoSelecionado{margin-top:12px;font-weight:700;font-size:20px;color:#2e7d32;text-align:center;min-height:28px;}
-    .registros{max-width:950px;margin:0 auto 40px auto;display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;}
-    .card{background:white;padding:20px;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,0.1);position:relative;transition:transform 0.2s,box-shadow 0.2s;}
-    .card:hover{transform:translateY(-5px);box-shadow:0 8px 20px rgba(0,0,0,0.15);}
-    .card p{margin-bottom:8px;}
-    .card .label{font-weight:bold;color:#388e3c;}
-    .deleteBtn{background:#e53935;color:white;border:none;padding:6px;border-radius:5px;cursor:pointer;position:absolute;width:60px;right:10px;bottom:15px;font-size:14px;transition:background 0.3s;}
-    .deleteBtn:hover{background:#b12b24;}
-    h2{text-align:center;color:#2e7d32;margin-bottom:15px;}
-    #searchCS{max-width:600px;margin:0 auto 30px auto;padding:12px;border-radius:8px;border:1px solid #ccc;display:block;}
-    table{width:90%;max-width:900px;margin:0 auto 40px auto;border-collapse:collapse;background:white;border-radius:12px;overflow:hidden;box-shadow:0 4px 12px rgba(0,0,0,0.1);}
-    th,td{border:1px solid #ddd;padding:12px;text-align:center;}
-    th{background:#2e7d32;color:white;}
-    tr:nth-child(even){background:#f9f9f9;}
-    @media(max-width:650px){.registros{grid-template-columns:1fr;}form,#searchCS,table{width:95%;}}
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    body {
+      background: #f4f7f6;
+      color: #333;
+      min-height: 100vh;
+      padding: 20px;
+    }
+    header {
+      background: linear-gradient(90deg, #2e7d32, #388e3c);
+      color: white;
+      padding: 20px;
+      text-align: center;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      margin-bottom: 30px;
+    }
+    header h1 {
+      font-size: 2em;
+    }
+    form {
+      background: white;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      max-width: 600px;
+      margin: 0 auto 40px auto;
+    }
+    label {
+      display: block;
+      margin-top: 15px;
+      font-weight: bold;
+      color: #2e7d32;
+    }
+    select, input[type="text"] {
+      width: 100%;
+      padding: 12px;
+      margin-top: 5px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      transition: all 0.3s;
+    }
+    select:focus, input[type="text"]:focus {
+      border-color: #388e3c;
+      outline: none;
+      box-shadow: 0 0 5px rgba(56,142,60,0.5);
+    }
+    button {
+      margin-top: 20px;
+      width: 100%;
+      padding: 14px;
+      background: #388e3c;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      font-size: 18px;
+      cursor: pointer;
+      transition: all 0.3s;
+    }
+    button:hover {
+      background: #2e7d32;
+    }
+    #codigoSelecionado {
+      margin-top: 12px;
+      font-weight: 700;
+      font-size: 20px;
+      color: #2e7d32;
+      text-align: center;
+      min-height: 28px;
+    }
+
+    .registros {
+      max-width: 950px;
+      margin: 0 auto 40px auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+    }
+    .card {
+      background: white;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      position: relative;
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+    }
+    .card p {
+      margin-bottom: 8px;
+    }
+    .card .label {
+      font-weight: bold;
+      color: #388e3c;
+    }
+    .deleteBtn {
+      background:#e53935;
+      color:white;
+      border:none;
+      padding:6px;
+      border-radius:5px;
+      cursor:pointer;
+      position: absolute;
+      width: 50px;
+      right: 10px;
+      bottom: 15px;
+      font-size: 14px;
+      transition: background 0.3s;
+    }
+    .deleteBtn:hover {
+      background: #b12b24;
+    }
+
+    h2 {
+      text-align: center;
+      color: #2e7d32;
+      margin-bottom: 15px;
+    }
+    #searchCS {
+      max-width: 600px;
+      margin: 0 auto 30px auto;
+      padding: 12px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      display: block;
+    }
+
+    @media (max-width: 650px) {
+      .registros {
+        grid-template-columns: 1fr;
+      }
+      form, #searchCS {
+        width: 95%;
+      }
+    }
   </style>
 </head>
 <body>
-  <header><h1>Registro de EPI - Raízen Mundial</h1></header>
+  <header>
+    <h1>Registro de EPI - Raízen Mundial</h1>
+  </header>
 
   <form id="epiForm">
     <label for="cs">CS da Pessoa:</label>
@@ -67,23 +185,7 @@
 
   <div class="registros" id="listaRegistros"></div>
 
-  <h2>Tabela de Registros</h2>
-  <table id="tabelaRegistros">
-    <thead>
-      <tr>
-        <th>CS</th>
-        <th>Tipo</th>
-        <th>Modelo</th>
-        <th>Tamanho</th>
-        <th>Código SAP</th>
-        <th>Motivo</th>
-        <th>Ações</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-
-  <!-- Firebase -->
+  <!-- 🔥 Firebase -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
     import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
@@ -102,146 +204,128 @@
     const db = getFirestore(app);
     window.db = db;
 
-    async function carregarDaNuvem() {
-      const snapshot = await getDocs(collection(db, "registrosEPI"));
-      const registros = [];
-      snapshot.forEach(docSnap => {
-        const data = docSnap.data();
-        data.id = docSnap.id;
-        registros.push(data);
-      });
-      localStorage.setItem("registrosEPI", JSON.stringify(registros));
-      atualizarListaRegistros();
-    }
-    carregarDaNuvem();
-
     const epiData = {
-      capacete:{ "Suspensão Carneira com Jugular":{ M:"6057580", G:"6014089"} },
-      oculos:{ "Óculos Incolor":{ Único:"6016960"}, "Óculos Cinza":{ Único:"6016961"}, "Óculos Ampla Visão":{ Único:"6008482"} },
-      botina:{ "Bota PVC sem Bico de Aço":{ 35:"6002760",36:"6002732",37:"6002733",38:"6002734",39:"6002735",40:"6002736",41:"6002737",42:"6002738",43:"6002739",44:"6002740",45:"6018105"} },
-      colete:{ "Colete Verde Limão":{ M:"6027671",G:"6027672",GG:"6039623",XGG:"6057591"} },
-      protetorAuricular:{ "Plug Silicone 3 Tamanhos":{ P:"6016022",M:"6044293",G:"6057569"} },
-      luvas:{ "Luva Resistência Mecânica":{ 8:"6043567",9:"6043568",10:"6047676",11:"6052203"} },
-      uniforme:{ "Camisa Manga Curta":{ P:"6040886",M:"6040925",G:"6040926"}, "Calça Cinza":{ P:"6040872",M:"6040873",G:"6040895"} }
+      capacete: {
+        "Suspensão Carneira com Jugular": { M: "6057580", G: "6014089" }
+      },
+      oculos: {
+        "Óculos Incolor": { Único: "6016960" },
+        "Óculos Cinza": { Único: "6016961" },
+        "Óculos Ampla Visão": { Único: "6008482" }
+      },
+      botina: {
+        "Bota PVC sem Bico de Aço": { 35: "6002760", 36: "6002732", 37: "6002733" },
+        "Bota Vaqueta com Composite": { 38: "6050760", 39: "6050734", 40: "6050768" }
+      }
     };
 
-    const tipoEpiSelect=document.getElementById("tipoEpi");
-    const codigoEpiSelect=document.getElementById("codigoEpi");
-    const codigoSelecionadoDiv=document.getElementById("codigoSelecionado");
-    const listaRegistros=document.getElementById("listaRegistros");
-    const tabelaRegistros=document.getElementById("tabelaRegistros").querySelector("tbody");
-    const searchCS=document.getElementById("searchCS");
+    const tipoEpiSelect = document.getElementById("tipoEpi");
+    const codigoEpiSelect = document.getElementById("codigoEpi");
+    const codigoSelecionadoDiv = document.getElementById("codigoSelecionado");
+    const listaRegistros = document.getElementById("listaRegistros");
+    const searchCS = document.getElementById("searchCS");
+    const form = document.getElementById("epiForm");
 
-    tipoEpiSelect.addEventListener("change",()=>{
-      codigoEpiSelect.innerHTML="";
-      codigoSelecionadoDiv.textContent="";
-      const tipo=tipoEpiSelect.value;
-      if(tipo&&epiData[tipo]){
-        codigoEpiSelect.disabled=false;
-        codigoEpiSelect.innerHTML='<option value="">Selecione...</option>';
-        for(const modelo in epiData[tipo]){
-          const optGroup=document.createElement("optgroup");
-          optGroup.label=modelo;
-          for(const tam in epiData[tipo][modelo]){
-            const opt=document.createElement("option");
-            opt.value=`${modelo}|${tam}`;
-            opt.textContent=`${modelo} - ${tam}`;
+    tipoEpiSelect.addEventListener("change", () => {
+      codigoEpiSelect.innerHTML = "";
+      codigoSelecionadoDiv.textContent = "";
+      const tipo = tipoEpiSelect.value;
+      if (tipo && epiData[tipo]) {
+        codigoEpiSelect.disabled = false;
+        codigoEpiSelect.innerHTML = '<option value="">Selecione o modelo/tamanho...</option>';
+        for (const modelo in epiData[tipo]) {
+          const optGroup = document.createElement("optgroup");
+          optGroup.label = modelo;
+          for (const tamanho in epiData[tipo][modelo]) {
+            const opt = document.createElement("option");
+            opt.value = `${modelo}|${tamanho}`;
+            opt.textContent = `${modelo} - ${tamanho}`;
             optGroup.appendChild(opt);
           }
           codigoEpiSelect.appendChild(optGroup);
         }
       } else {
-        codigoEpiSelect.disabled=true;
-        codigoEpiSelect.innerHTML='<option value="">Selecione o tipo primeiro...</option>';
+        codigoEpiSelect.disabled = true;
+        codigoEpiSelect.innerHTML = '<option value="">Selecione o tipo de EPI primeiro...</option>';
       }
     });
 
-    codigoEpiSelect.addEventListener("change",()=>{
-      const tipo=tipoEpiSelect.value;
-      const [modelo,tamanho]=codigoEpiSelect.value.split("|");
-      const codigo=epiData[tipo]?.[modelo]?.[tamanho]||"";
-      codigoSelecionadoDiv.textContent=codigo?`Código SAP: ${codigo}`:"";
+    codigoEpiSelect.addEventListener("change", () => {
+      const tipo = tipoEpiSelect.value;
+      const [modelo, tamanho] = codigoEpiSelect.value.split("|");
+      if (modelo && tamanho && epiData[tipo][modelo][tamanho]) {
+        const codigo = epiData[tipo][modelo][tamanho];
+        codigoSelecionadoDiv.textContent = `Código SAP: ${codigo}`;
+      } else {
+        codigoSelecionadoDiv.textContent = "";
+      }
     });
 
-    async function salvarRegistro(cs,tipoEpi,modelo,tamanho,codigo,motivo){
-      const registros=JSON.parse(localStorage.getItem("registrosEPI"))||[];
-      const novo={cs,tipoEpi,modelo,tamanho,codigo,motivo,data:new Date().toISOString()};
-      registros.push(novo);
-      localStorage.setItem("registrosEPI",JSON.stringify(registros));
+    async function salvarRegistro(cs, tipoEpi, modelo, tamanho, codigo, motivo) {
+      const registros = JSON.parse(localStorage.getItem("registrosEPI")) || [];
+      const novoRegistro = { cs, tipoEpi, modelo, tamanho, codigo, motivo, data: new Date().toISOString() };
+      registros.push(novoRegistro);
+      localStorage.setItem("registrosEPI", JSON.stringify(registros));
+
+      await addDoc(collection(db, "registrosEPI"), novoRegistro)
+        .then(docRef => console.log("✅ Salvo na nuvem:", docRef.id))
+        .catch(err => console.error("❌ Erro:", err));
+
+      alert("✅ Registro salvo!");
       atualizarListaRegistros();
-      await addDoc(collection(window.db,"registrosEPI"),novo);
     }
 
-    async function excluirRegistro(index){
-      const registros=JSON.parse(localStorage.getItem("registrosEPI"))||[];
-      const registro=registros[index];
-      registros.splice(index,1);
-      localStorage.setItem("registrosEPI",JSON.stringify(registros));
-      atualizarListaRegistros();
-      const snapshot=await getDocs(collection(window.db,"registrosEPI"));
-      snapshot.forEach(async(docSnap)=>{
-        const d=docSnap.data();
-        if(d.cs===registro.cs && d.data===registro.data){
-          await deleteDoc(doc(window.db,"registrosEPI",docSnap.id));
-        }
-      });
-    }
+    form.addEventListener("submit", e => {
+      e.preventDefault();
+      const cs = document.getElementById("cs").value.trim();
+      const tipoEpi = tipoEpiSelect.value;
+      const valor = codigoEpiSelect.value;
+      if (!cs || !tipoEpi || !valor) return alert("Preencha todos os campos!");
+      const [modelo, tamanho] = valor.split("|");
+      const codigo = epiData[tipoEpi][modelo][tamanho];
+      const motivo = document.getElementById("motivo").value.trim();
+      salvarRegistro(cs, tipoEpi, modelo, tamanho, codigo, motivo);
+      form.reset();
+      codigoEpiSelect.disabled = true;
+      codigoSelecionadoDiv.textContent = "";
+    });
 
-    function atualizarListaRegistros(){
-      const registros=JSON.parse(localStorage.getItem("registrosEPI"))||[];
-      const filtro=searchCS.value.trim().toLowerCase();
-      listaRegistros.innerHTML="";
-      tabelaRegistros.innerHTML="";
-      const filtrados=registros.filter(r=>r.cs.toLowerCase().includes(filtro));
-      if(filtrados.length===0){
-        listaRegistros.innerHTML="<p style='text-align:center;color:#888;'>Nenhum registro encontrado.</p>";
+    function atualizarListaRegistros() {
+      const registros = JSON.parse(localStorage.getItem("registrosEPI")) || [];
+      const filtro = searchCS.value.trim().toLowerCase();
+      listaRegistros.innerHTML = "";
+      const filtrados = registros.filter(r => r.cs.toLowerCase().includes(filtro));
+      if (filtrados.length === 0) {
+        listaRegistros.innerHTML = "<p style='text-align:center;color:#888;'>Nenhum registro encontrado.</p>";
         return;
       }
-      filtrados.forEach((r,i)=>{
-        // CARD
-        const card=document.createElement("div");
-        card.className="card";
-        card.innerHTML=`
+      filtrados.forEach((r, i) => {
+        const card = document.createElement("div");
+        card.className = "card";
+        card.innerHTML = `
           <p><span class='label'>CS:</span> ${r.cs}</p>
           <p><span class='label'>Tipo:</span> ${r.tipoEpi}</p>
           <p><span class='label'>Modelo:</span> ${r.modelo}</p>
           <p><span class='label'>Tamanho:</span> ${r.tamanho}</p>
           <p><span class='label'>Código SAP:</span> ${r.codigo}</p>
           <p><span class='label'>Motivo:</span> ${r.motivo}</p>
-          <button class="deleteBtn" onclick="excluirRegistro(${i})">Excluir</button>
-        `;
+          <button class='deleteBtn' data-index='${i}'>Excluir</button>`;
         listaRegistros.appendChild(card);
+      });
 
-        // TABELA
-        const tr=document.createElement("tr");
-        tr.innerHTML=`
-          <td>${r.cs}</td>
-          <td>${r.tipoEpi}</td>
-          <td>${r.modelo}</td>
-          <td>${r.tamanho}</td>
-          <td>${r.codigo}</td>
-          <td>${r.motivo}</td>
-          <td><button onclick="excluirRegistro(${i})" class="deleteBtn">Excluir</button></td>
-        `;
-        tabelaRegistros.appendChild(tr);
+      document.querySelectorAll(".deleteBtn").forEach(btn => {
+        btn.onclick = () => excluirRegistro(parseInt(btn.getAttribute("data-index")));
       });
     }
 
-    document.getElementById("epiForm").addEventListener("submit",async e=>{
-      e.preventDefault();
-      const cs=document.getElementById("cs").value.trim();
-      const tipoEpi=tipoEpiSelect.value;
-      const valor=codigoEpiSelect.value;
-      if(!cs||!tipoEpi||!valor)return alert("Preencha todos os campos!");
-      const [modelo,tamanho]=valor.split("|");
-      const codigo=epiData[tipoEpi][modelo][tamanho];
-      const motivo=document.getElementById("motivo").value.trim();
-      await salvarRegistro(cs,tipoEpi,modelo,tamanho,codigo,motivo);
-      e.target.reset();codigoEpiSelect.disabled=true;codigoSelecionadoDiv.textContent="";
-    });
+    function excluirRegistro(i) {
+      const registros = JSON.parse(localStorage.getItem("registrosEPI")) || [];
+      registros.splice(i, 1);
+      localStorage.setItem("registrosEPI", JSON.stringify(registros));
+      atualizarListaRegistros();
+    }
 
-    searchCS.addEventListener("input",atualizarListaRegistros);
-    window.excluirRegistro=excluirRegistro;
+    searchCS.addEventListener("input", atualizarListaRegistros);
     atualizarListaRegistros();
   </script>
 </body>
