--- a/index.html
+++ b/index.html
@@ -308,8 +308,7 @@
           <p><span class='label'>Modelo:</span> ${r.modelo}</p>
           <p><span class='label'>Tamanho:</span> ${r.tamanho}</p>
           <p><span class='label'>Código SAP:</span> ${r.codigo}</p>
-          <p><span class='label'>Motivo:</span> ${r.motivo}</p>
-          <button class='deleteBtn' data-index='${i}'>Excluir</button>`;
+          <p><span class='label'>Motivo:</span> ${r.motivo}</p>`;
         listaRegistros.appendChild(card);
       });
 
@@ -330,3 +329,4 @@
   </script>
 </body>
 </html>
+
