--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@
         <p><span class='label'>Modelo:</span> ${r.modelo}</p>
         <p><span class='label'>Tamanho:</span> ${r.tamanho}</p>
         <p><span class='label'>Código SAP:</span> ${r.codigo}</p>
-        <p><span class='label'>Motivo:</span> ${r.motivo}</p>`;
+        <p><span class='label'>Motivo:</span> ${r.motivo}</p>
+        <button class='deleteBtn' data-index='${i}'>Excluir</button>`;
         listaRegistros.appendChild(card);
       });
       atualizarResumoSemanal(filtrados);
@@ -241,3 +242,4 @@
   </script>
 </body>
 </html>
+
