--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@
     const epiData = {
       capacete: { "Suspensão Carneira com Jugular": { M: "6057580", G: "6014089" } },
       oculos: { "Óculos Incolor": { Único: "6016960" }, "Óculos Cinza": { Único: "6016961" }, "Óculos Ampla Visão": { Único: "6008482" } },
-      botina: {
+      botina: { 
         "Bota PVC sem Bico de Aço": { 35:"6002760",36:"6002732",37:"6002733",38:"6002734",39:"6002735",40:"6002736",41:"6002737",42:"6002738",43:"6002739",44:"6002740",45:"6018105"},
         "Bota Vaqueta com Composite": {36:"6050775",37:"6050761",38:"6050760",39:"6050734",40:"6050768",41:"6050744",42:"6050759",43:"6050733",44:"6050743",45:"6050732",46:"6050767",47:"6049174"},
         "Botina de Amarrar Antitorção": {34:"6054631",35:"6054630",36:"6054664",37:"6054622",38:"6054663",39:"6054672",40:"6054621",41:"6054683",42:"6054682",43:"6054681",44:"6054662",45:"6054661",46:"6054680",47:"6054671"}
       },
       colete: { "Colete Verde Limão": { M:"6027671",G:"6027672",GG:"6039623",XGG:"6057591"} },
       protetorAuricular: { "Plug Silicone 3 Tamanhos": { P:"6016022",M:"6044293",G:"6057569"} },
-      luvas: { "Luva Resistência Mecânica": { 8:"6043567",9:"6042868",10:"6047676",11:"6052203"} },
+      luvas: { "Luva Resistência": { 8:"6043567",9:"6042868",10:"6047676",11:"6052203"} },
       uniforme: {
         "Camisa Manga Curta": { PP:"6040852",P:"6040886",M:"6040925",G:"6040926",GG:"6040927",XG:"6040928" },
         "Camisa Manga Longa": { PP:"6038450",P:"6040931",M:"6040932",G:"6040933",GG:"6040866" },
@@ -392,6 +392,7 @@
   </script>
 </body>
 </html>
+
 
 
 
