--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
       capacete: { "Suspensão Carneira com Jugular": { M: "6057580", G: "6014089" } },
       oculos: { "Óculos Incolor": { Único: "6016960" }, "Óculos Cinza": { Único: "6016961" }, "Óculos Ampla Visão": { Único: "6008482" } },
       botina: { 
+        "Bota SEG PVC preta cano longo com bico de aço": { 36:"6051427",37:"6049357",38:"6018088 / 6060965",39:"6018089 / 6060928",40:"6018090 / 6060914",41:"6018091",42:"6018092 / 6060927",43:"6018093 / 6060944",44:"6018094",45:"6053673 / 6060943"},
         "Bota PVC sem Bico de Aço": { 35:"6002760",36:"6002732",37:"6002733",38:"6002734",39:"6002735",40:"6002736",41:"6002737",42:"6002738",43:"6002739",44:"6002740",45:"6018105"},
         "Bota Vaqueta com Composite": {36:"6050775",37:"6050761",38:"6050760",39:"6050734",40:"6050768",41:"6050744",42:"6050759",43:"6050733",44:"6050743",45:"6050732",46:"6050767",47:"6049174"},
         "Botina de Amarrar Antitorção": {34:"6054631",35:"6054630",36:"6054664",37:"6054622",38:"6054663",39:"6054672",40:"6054621",41:"6054683",42:"6054682",43:"6054681",44:"6054662",45:"6054661",46:"6054680",47:"6054671"}
@@ -392,7 +393,6 @@
   </script>
 </body>
 </html>
-
 
 
 
