--- a/index.html
+++ b/index.html
@@ -113,7 +113,18 @@
   <!-- 🔧 Lógica local + integração -->
   <script>
     const epiData = {
-      capacete: { "Suspensão Carneira com Jugular": { M: "6057580", G: "6014089" } },
+      capacete: {
+  "Suspensão Carneira com Jugular": {
+    M: "6057580",
+    G: "6014089"
+  },
+  "Classe B com Jugular": {
+    "Vermelho (Brigada de Emergência)": "6003936",
+    "Cinza (Operação EAB)": "6036417",
+    "Amarelo (Funcionários recém-contratados)": "6040196",
+    "Branco (Visitantes)": "6003932"
+  }
+},
       oculos: { "Óculos Incolor": { Único: "6016960" }, "Óculos Cinza": { Único: "6016961" }, "Óculos Ampla Visão": { Único: "6008482" } },
       botina: { 
         "Bota SEG PVC preta cano longo com bico de aço": { 36:"6051427",37:"6049357",38:"6018088 / 6060965",39:"6018089 / 6060928",40:"6018090 / 6060914",41:"6018091",42:"6018092 / 6060927",43:"6018093 / 6060944",44:"6018094",45:"6053673 / 6060943"},
@@ -393,6 +404,7 @@
   </script>
 </body>
 </html>
+
 
 
 
