--- a/index.html
+++ b/index.html
@@ -134,7 +134,25 @@
       },
       colete: { "Colete Verde Limão": { M:"6027671",G:"6027672",GG:"6039623",XGG:"6057591"} },
       protetorAuricular: { "Plug Silicone 3 Tamanhos": { P:"6016022",M:"6044293",G:"6057569"} },
-      luvas: { "Luva Resistência Mecânica": { 8:"6043567",9:"6043568",10:"6047676",11:"6052203"} },
+      luvas: {
+  "Luva Resistência Mecânica": {
+    "8": "6043567",
+    "9": "6043568",
+    "10": "6047676",
+    "11": "6052203"
+  },
+  "Luva Elastano Maxi Dry": {
+    "P": "6050998",
+    "M": "6042869",
+    "G": "6042868"
+  },
+  "Luva de Procedimento": {
+    "PP": ["6007583", "6051588"],
+    "P": "6052939",
+    "M": ["6042450", "6052947"],
+    "G": ["6042451", "6052934"]
+  }
+},
       uniforme: {
         "Camisa Manga Curta": { PP:"6040852",P:"6040886",M:"6040925",G:"6040926",GG:"6040927",XG:"6040928" },
         "Camisa Manga Longa": { PP:"6038450",P:"6040931",M:"6040932",G:"6040933",GG:"6040866" },
@@ -404,6 +422,7 @@
   </script>
 </body>
 </html>
+
 
 
 
