--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   <!-- 🔧 Lógica local + integração -->
   <script>
     const epiData = {
-      capacete: {
+     capacete: {
   "Suspensão Carneira com Jugular": {
     M: "6057580",
     G: "6014089"
@@ -123,6 +123,9 @@
     "Cinza (Operação EAB)": "6036417",
     "Amarelo (Funcionários recém-contratados)": "6040196",
     "Branco (Visitantes)": "6003932"
+  },
+  "Suspensão Capacete com Catraca": {
+    "Único": "6014087"
   }
 },
       oculos: { "Óculos Incolor": { Único: "6016960" }, "Óculos Cinza": { Único: "6016961" }, "Óculos Ampla Visão": { Único: "6008482" } },
@@ -422,6 +425,7 @@
   </script>
 </body>
 </html>
+
 
 
 
